--- a/main.html
+++ b/main.html
@@ -5,26 +5,18 @@
       <script src="script.js"></script>
       <style src="styles.css"></style>
    </head>
-   <form>
-    <h1>Hello world</h1>
-        <p></p>
-        <div id="form">
-            <form action="/post.php">
-                <label>Your Name: <br>
-                    <input type="text" class="name" placeholder="full name">
-                </label><br>
-                <label>Email: <br>
-                    <input type="text" class="email" placeholder="email">
-                </label>
-                <br>
-                <!-- <label>Upload Video: <br>
-                    <input type="file" accept="video/*" class="video"placeholder="">
-                </label> -->
-                <br>
-                <br>
-                <input type="submit" value="Submit"></input>
-                
-            </form>
-        </div>
+   <body>
+   <h1>Hello world</h1>
+      <form name="myForm" action="" method="GET">
+         Please enter your name and email: <br>
+         <input type="text" name="inputbox" value="" placeholder="ex. John Smith">
+         <input type="text" name="emailbox" value="" placeholder="ex. user01@email.com"> <br>
+         <!-- <input type="file" name="videobox" value="" accept="video/*"><br> -->
+         <input type ="button" name="button" value="Submit" onClick="testResults(this.form)">
+      </form>
+       
+
+
+   <div id="app"></div>
    </body>
 </html>
