--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 		<h1>Lewis & Clark College Video Compressor Service</h1>
 		<div class="floatContainer">
 			<div class="floatChild">
-				<form action="/post.php" method="GET">
+				<form action="comp.php" method="post">
+					<p>
 					<p>Please enter your name and email:</p>
-					<input type="text" id="fname" name="fname" placeholder="first name"><br>
-					<input type="text" id="lname" name="lname" placeholder="last name"><br>
-					<input type="text" id="email" name="email" placeholder="email">
+					<input type="text" id="fName" name="f_name" size="30" required placeholder="first name"><br>
+					<input type="text" id="lName" name="l_name" size="30" required placeholder="last name"><br>
+					<input type="text" id="email" name="e_mail" size="30" required placeholder="email">
 					<p>Please select your desired file size for the completed compressed video:</p>
 					<p>
 						<input type="radio" id="small" name="desired_size" value="small">
@@ -25,7 +26,8 @@
 						<input type="radio" id="large" name="desired_size" value="large">
 						<label for="large">Large</label>
 					</p>
-					<input type ="button" name="button" value="Submit" onClick="testResults(this.form)">
+					</p>
+					<input type ="submit" value="submit">
 				</form>
 			</div>
 			<div class="floatChild">
