--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Lewis & Clark College Video Compressor Service</title>
 		<meta charset = "utf-8">
 		<link href="compressor.css" type="text/css" rel="stylesheet">
+		<script src="indexJS.js"></script>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 	</head>
 
@@ -16,7 +17,8 @@
 					<p>Please enter your name and email:</p>
 					<input type="text" id="fName" name="f_name" size="30" required placeholder="first name"><br>
 					<input type="text" id="lName" name="l_name" size="30" required placeholder="last name"><br>
-					<input type="text" id="email" name="e_mail" size="30" required placeholder="email">
+					<input type="email" id="email" name="e_mail" size="30" required placeholder="email">
+
 					<p>Please select your desired file size for the completed compressed video:</p>
 					<p>
 						<input type="radio" id="small" name="desired_size" value="small">
