--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 					<input type="text" id="fName" name="f_name" size="30" required placeholder="first name"><br>
 					<input type="text" id="lName" name="l_name" size="30" required placeholder="last name"><br>
 					<input type="email" id="email" name="e_mail" size="30" required placeholder="email">
+					<input type="file" id="myFile" name="filename">
 
 					<p>Please select your desired file size for the completed compressed video:</p>
 					<p>
