--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 					<input type="email" id="email" name="e_mail" size="30" required placeholder="email">
 					<input type="file" id="myFile" name="filename">
 
+					<p>Please select your due date:</p>
+					<p>
+						<input type="radio" id="choose" name="choose_date" value="choose">
+						<label for="choose"><input type="date" name="date_due" id="dateDue"></label><br>
+						<input type="radio" id="asap" name="choose_date" value="asap">
+						<label for="asap">ASAP</label>
+					</p>
+
 					<p>Please select your desired file size for the completed compressed video:</p>
 					<p>
 						<input type="radio" id="small" name="desired_size" value="small">
