attempting video upload

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<h1>Lewis & Clark College Video Compressor Service</h1>
 		<div class="floatContainer">
 			<div class="floatChild">
-				<form action="comp.php" enctype="multipart/form-data" method="post">
+				<form action="comp.php" enctype="multipart/form-data" method="post" onsubmit="saveFile()">
 					<p>
 					<p>Please enter your name and email:</p>
 					<input type="text" id="fName" name="f_name" size="30" required placeholder="first name"><br>
