--- a/upload.html
+++ b/upload.html
@@ -14,8 +14,7 @@
                 let formData = new FormData();
                 formData.append("file", fileupload.files[0]);
                 await fetch('/upload.php', {method: "POST", body: formData});
-                alert('The file has been uploaded successfully.');
-                return 1;
+                //alert('The file has been uploaded successfully.');
             }
         </script>
     
