--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<label for="large">Large</label>
 					</p>
 					</p>
-					<input type ="submit" value="submit">
+					<input type ="submit" value="submit" onclick="sendEmail();">
 				</form>
 			</div>
 			<div class="floatChild">
