--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<link href="compressor.css" type="text/css" rel="stylesheet">
 		<script src="indexJS.js"></script>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<!-- <script src="https://smtpjs.com/v3/smtp.js">
+		</script> -->
 	</head>
 
 	<body>
