--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<label for="large">Large</label>
 					</p>
 					</p>
-					<input type ="submit" value="submit" id="submit" onclick="sendEmail();">
+					<input type ="submit" value="submit" id="submit" onclick="sendFileToDrive();">
 				</form>
 			</div>
 			<div class="floatChild">
