--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<h1>Lewis & Clark College Video Compressor Service</h1>
 		<div class="floatContainer">
 			<div class="floatChild">
+				<button type="button" id="driveButton">Send To Drive</button>
 				<form action="comp.php" method="post">
 					<p>
 					<p>Please enter your name and email:</p>
@@ -40,7 +41,7 @@
 						<label for="large">Large</label>
 					</p>
 					</p>
-					<input type ="submit" value="submit" id="submit" onclick="sendFileToDrive();">
+					<input type ="submit" value="submit" id="submit" onclick="sendEmail()">
 				</form>
 			</div>
 			<div class="floatChild">
