--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Lewis & Clark College Video Compressor Service</title>
 		<meta charset = "utf-8">
 		<link href="compressor.css" type="text/css" rel="stylesheet">
+		<script src="pass.js"></script>
+		<script src="index.js"></script>
 		<script src="siteJS.js"></script>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<!-- <script src="https://smtpjs.com/v3/smtp.js">
@@ -14,7 +16,7 @@
 		<h1>Lewis & Clark College Video Compressor Service</h1>
 		<div class="floatContainer">
 			<div class="floatChild">
-				<button type="button" id="driveButton">Send To Drive</button>
+				<button type="button" id="driveButton" onclick="sendToDrive()">Send To Drive</button>
 				<form action="comp.php" method="post">
 					<p>
 					<p>Please enter your name and email:</p>
