made a folder for testing google api stuff

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta charset = "utf-8">
 		<link href="compressor.css" type="text/css" rel="stylesheet">
 		<script src="pass.js"></script>
-		<script src="index.js"></script>
-		<script src="siteJS.js"></script>
+		<script type="module" src="index.js"></script>
+		<script type="module" src="siteJS.js"></script>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<!-- <script src="https://smtpjs.com/v3/smtp.js">
 		</script> -->
