--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 					<input type="text" id="fName" name="f_name" size="30" required placeholder="first name"><br>
 					<input type="text" id="lName" name="l_name" size="30" required placeholder="last name"><br>
 					<input type="email" id="email" name="e_mail" size="30" required placeholder="email">
+
+					<p>Select video to upload:</p>
 					<input type="file" id="video" name="video" accept="video/*">
 
 					<p>Please select your due date:</p>
@@ -40,7 +42,7 @@
 						<label for="large">Large</label>
 					</p>
 					</p>
-					<input type ="submit" value="submit" onclick="sendEmail();">
+					<input type ="submit" value="Submit" onclick="sendEmail();">
 				</form>
 			</div>
 			<div class="floatChild">
