a very productive tangent

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 
 	<body>
-		<h1>Lewis & Clark College Video Compressor Service</h1>
+		<h1 id="banner">Lewis & Clark College Video Compressor Service</h1>
 		<div class="floatContainer">
 			<div class="floatChild">
 				<form action="comp.php" method="post" enctype="multipart/form-data">
