--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		<meta charset="utf-8">
 		<link href="compressor.css" type="text/css" rel="stylesheet">
 		<script src="indexJS.js"></script>
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<link rel="icon" type="image/x-icon" href="usedMedia/favicon.ico">
 	</head>
 
 	<body>
 		<div class="header">
-			<img src="CompressionHeader.png" alt="Compression Logo" style="width:100%;">
+			<img src="usedMedia/CompressionHeader.png" alt="Compression Logo" style="width:100%;">
 			<div class="Header_Text">LC Video Compression</div>
 		</div>
 		<div class="bodyParagraphs">
