--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
     <title>Lewis & Clark College Video Compressor Service</title>
     <meta charset = "utf-8">
     <link href="compressor.css" type="text/css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../usedMedia/favicon.ico">
   </head>
 
   <body>
