updated submit button formatting

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<label for="large">Large</label>
 					</p>
 					<p>
-						<input type ="submit" value="Submit" id="submit" onclick="sendEmail();">
+						<input type="submit" value="Submit" class="submit" onclick="sendEmail();">
 					</p>
 				</form>
 			</div>
