testing min date

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<p>Please select your due date:</p>
 					<p>
 						<input type="radio" id="choose" name="choose_date" value="choose">
-						<label for="choose"><input type="date" name="date_due" id="dateDue"></label><br>
+						<label for="choose"><input type="date" name="date_due" id="dateDue" min=""></label><br>
 						<input type="radio" id="asap" name="choose_date" value="asap">
 						<label for="asap">ASAP</label>
 					</p>
