test progress bar

--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
 						<label for="large">Large</label>
 					</p>
 					<p>
-						<input type="submit" value="Submit" id="originalSubmit" class="submit" onclick="sendEmail();">
+						<input type="submit" value="Submit" id="originalSubmit" class="submit" onclick="sendEmail();" onclick="move();">
 					</p>
 				</form>
+				<div id="myProgress">
+					<div id="myBar"></div>
+				</div>
 			</div>
 		</div>
 	</body>
