new progress bar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</p>
 			</div>
 			<div class="paragraph">
-				<form action="comp.php" method="post" enctype="multipart/form-data">
+				<form action="comp.php" method="post" enctype="multipart/form-data" id="upload-form">
 					<p>Please enter your name and email:</p>
 					<p>
 						<input type="text" id="fName" name="f_name" size="30" required placeholder="first name"><br>
@@ -50,12 +50,12 @@
 						<label for="large">Large</label>
 					</p>
 					<p>
-						<input type="submit" value="Submit" id="originalSubmit" class="submit" onclick="sendEmail();" onclick="move();">
+						<input type="submit" value="Submit" id="originalSubmit" class="submit" onclick="clickProcess();">
 					</p>
+					<div id="progressBar">
+						<div id="progress"></div>
+					</div>
 				</form>
-				<div id="myProgress">
-					<div id="myBar"></div>
-				</div>
 			</div>
 		</div>
 	</body>
