--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 						<label for="large">Large</label>
 					</p>
 					<p>
-						<input type="submit" value="Submit" id="originalSubmit" class="submit" onclick="clickProcess();">
+						<input type="submit" value="Submit" id="originalSubmit" class="submit">
+						<div id="progressBar">
+							<div id="progress"></div>
+						</div>
 					</p>
-					<div id="progressBar">
-						<div id="progress"></div>
-					</div>
 				</form>
 			</div>
 		</div>
