scrap progress bar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</p>
 			</div>
 			<div class="paragraph">
-				<form action="comp.php" method="post" enctype="multipart/form-data" id="upload-form">
+				<form action="comp.php" method="post" enctype="multipart/form-data">
 					<p>Please enter your name and email:</p>
 					<p>
 						<input type="text" id="fName" name="f_name" size="30" required placeholder="first name"><br>
@@ -51,9 +51,6 @@
 					</p>
 					<p>
 						<input type="submit" value="Submit" id="originalSubmit" class="submit">
-						<div id="progressBar">
-							<div id="progress"></div>
-						</div>
 					</p>
 				</form>
 			</div>
